# Workmate

./: .gitignore  README.md  main.py  pyproject.toml
tests/: run_tests.sh  test_main.py
